some speaker bios

--- a/content/profiles/adam-fish.mdx
+++ b/content/profiles/adam-fish.mdx
@@ -1,8 +1,8 @@
 ---
 name: Adam Fish
-role: Company
+role: Ditto
 avatar: /images/speakers/TBD.png
 speaker: true
 ---
 
-TBD 
+CEO and co-founder of Ditto, the edge sync platform that syncs data from edge to cloud even without connectivity. Previously worked for HBO, Realm Inc. 
