--- a/content/profiles/paul-butler.mdx
+++ b/content/profiles/paul-butler.mdx
@@ -1,8 +1,11 @@
 ---
 name: Paul Butler
-role: Company
+role: Jamsocket
 avatar: /images/speakers/TBD.png
 speaker: true
 ---
 
-TBD
+Paul is a co-founder of Jamsocket, a platform for scaling sync engines. His open-source work includes Plane, a router for scaling WebSocket servers, and Y-Sweet, a Yjs backend that runs on Plane.
+
+Paul also hosts the Local Thirst happy hour series, with past events in NYC, San Francisco, and London.
+
