--- a/content/profiles/pvh.mdx
+++ b/content/profiles/pvh.mdx
@@ -1,8 +1,8 @@
 ---
-name: PvH
-role: Company
+name: Peter van Hardenberg
+role: Ink & Switch
 avatar: /images/speakers/TBD.png
 speaker: true
 ---
 
-TBD 
+Peter will share the latest about Patchwork, a new Ink & Switch research project. 
