--- a/content/profiles/thomas-steiner.mdx
+++ b/content/profiles/thomas-steiner.mdx
@@ -1,8 +1,8 @@
 ---
 name: Thomas Steiner
-role: Company
+role: Google
 avatar: /images/speakers/TBD.png
 speaker: true
 ---
 
-TBD
+I'm a Chrome Developer Relations Engineer.
