--- a/content/profiles/dev-agrawal.mdx
+++ b/content/profiles/dev-agrawal.mdx
@@ -1,8 +1,8 @@
 ---
 name: Dev Agrawal
-role: Company
+role: SmartData
 avatar: /images/speakers/TBD.png
 speaker: true
 ---
 
-TBD 
+I'm a member of the Solidjs core team, and I've been building fullstack apps for the last 8 years. The first framework that enabled me to build lots of cool stuff was Meteor, and it's fullstack experience is something I never saw again, until I got introduced to local first technologies.
