speaker images from last year

--- a/content/profiles/aaron-boodman.mdx
+++ b/content/profiles/aaron-boodman.mdx
@@ -1,7 +1,7 @@
 ---
 name: Aaron Boodman
 role: Rocicorp
-avatar: /images/speakers/TBD.png
+avatar: /images/speakers/aaron-boodman.png
 speaker: true
 ---
 
