--- a/content/profiles/alex-good.mdx
+++ b/content/profiles/alex-good.mdx
@@ -1,7 +1,7 @@
 ---
 name: Alex Good
 role: Ink & Switch
-avatar: /images/speakers/TBD.png
+avatar: /images/speakers/alex-good.png
 speaker: true
 ---
 
