--- a/content/profiles/tuomas-artman.mdx
+++ b/content/profiles/tuomas-artman.mdx
@@ -1,7 +1,7 @@
 ---
 name: Tuomas Artman
 role: Company
-avatar: /images/speakers/TBD.png
+avatar: /images/speakers/tuomas-artman.png
 speaker: true
 ---
 
