--- a/content/profiles/james-arthur.mdx
+++ b/content/profiles/james-arthur.mdx
@@ -1,7 +1,7 @@
 ---
 name: James Arthur
 role: Electric
-avatar: /images/speakers/TBD.png
+avatar: /images/speakers/james-arthur.png
 speaker: true
 ---
 
