--- a/content/profiles/jess-martin.mdx
+++ b/content/profiles/jess-martin.mdx
@@ -1,7 +1,7 @@
 ---
 name: Jess Martin
 role: Company
-avatar: /images/speakers/TBD.png
+avatar: /images/speakers/jess-martin.png
 speaker: true
 ---
 
