Thomas Steiner's talk and bio

--- a/content/profiles/thomas-steiner.mdx
+++ b/content/profiles/thomas-steiner.mdx
@@ -1,8 +1,10 @@
 ---
 name: Thomas Steiner
 role: Google
-avatar: /images/speakers/TBD.png
+avatar: /images/speakers/thomas-steiner.png
 speaker: true
+mastodon: "@tomayac@toot.cafe"
+website: https://blog.tomayac.com/
 ---
 
-I'm a Chrome Developer Relations Engineer.
+Thomas Steiner is a Developer Relations Engineer at Google, focused on Web AI, WebAssembly, and Project Fugu. He's an alum of University of Lyon (Postdoc), Polytechnic University of Barcelona (Ph. D.), and University of Karlsruhe (MA).
