bluesky field, doesn't display yet

--- a/content/profiles/thomas-steiner.mdx
+++ b/content/profiles/thomas-steiner.mdx
@@ -3,6 +3,7 @@ name: Thomas Steiner
 role: Google
 avatar: /images/speakers/thomas-steiner.png
 speaker: true
+bluesky: "@tomayac.com"
 mastodon: "@tomayac@toot.cafe"
 website: https://blog.tomayac.com/
 ---
