tuomas talk and bio

--- a/content/profiles/tuomas-artman.mdx
+++ b/content/profiles/tuomas-artman.mdx
@@ -1,8 +1,10 @@
 ---
 name: Tuomas Artman
-role: Company
+role: Linear
 avatar: /images/speakers/tuomas-artman.png
 speaker: true
+twitter: https://x.com/artman
+website: https://linear.app/
 ---
 
-TBD
+Co-founder of Linear. Previously senior staff engineer at Uber.
