--- a/content/profiles/paul-butler.mdx
+++ b/content/profiles/paul-butler.mdx
@@ -3,9 +3,10 @@ name: Paul Butler
 role: Jamsocket
 avatar: /images/speakers/TBD.png
 speaker: true
+twitter: https://x.com/paulgb
+bluesky: https://bsky.app/profile/paulbutler.org
 ---
 
 Paul is a co-founder of Jamsocket, a platform for scaling sync engines. His open-source work includes Plane, a router for scaling WebSocket servers, and Y-Sweet, a Yjs backend that runs on Plane.
 
 Paul also hosts the Local Thirst happy hour series, with past events in NYC, San Francisco, and London.
-
