nikita talk and bio

--- a/content/profiles/nikita-prokopov.mdx
+++ b/content/profiles/nikita-prokopov.mdx
@@ -1,8 +1,9 @@
 ---
 name: Nikita Prokopov
-role: Company
-avatar: /images/speakers/TBD.png
+avatar: /images/speakers/nikita.jpg
+role: .
 speaker: true
+mastodon: https://mastodon.online/@nikitonsky
 ---
 
-TBD 
+Niki is a Clojure hacker with experience in building databases (DataScript), UI frameworks (Humble UI), sync engines (failed) and even fonts (Fira Code). Blogs about (de)-centralized systems, software stack and UX at tonsky.me
