--- a/content/profiles/matthew-weidner.mdx
+++ b/content/profiles/matthew-weidner.mdx
@@ -1,8 +1,12 @@
 ---
 name: Matthew Weidner
 role: Company
-avatar: /images/speakers/TBD.png
+avatar: /images/speakers/matthew-weidner.jpg
 speaker: true
+bluesky: https://bsky.app/profile/mweidner.bsky.social
+website: https://mattweidner.com/
 ---
 
-TBD
+Matthew is a software developer at Common Curriculum, Inc., where he works on a real-time collaborative app for teachers. He is also a PhD student in absentia at Carnegie Mellon University.
+
+Matthew is interested in everything CRDT and hopes to one day make FOSS collaborative apps a reality. He writes a developer-focused blog at https://mattweidner.com/.
