speaker headshots taken from figma

--- a/content/profiles/adam-wiggins.mdx
+++ b/content/profiles/adam-wiggins.mdx
@@ -1,8 +1,7 @@
 ---
 name: Adam Wiggins
 role: Local First Conf
-avatar: /images/speakers/TBD.png
+avatar: /images/speakers/adam-wiggins.png
 speaker: true
+website: https://adamwiggins.com/
 ---
-
-TBD
