--- a/content/profiles/brooklyn-zelenka.mdx
+++ b/content/profiles/brooklyn-zelenka.mdx
@@ -1,8 +1,6 @@
 ---
 name: Brooklyn Zelenka
 role: Company
-avatar: /images/speakers/TBD.png
+avatar: /images/speakers/brooklyn.jpg
 speaker: true
 ---
-
-TBD 
