--- a/content/profiles/eileen-wagner.mdx
+++ b/content/profiles/eileen-wagner.mdx
@@ -1,8 +1,6 @@
 ---
 name: Eileen Wagner
 role: Company
-avatar: /images/speakers/TBD.png
+avatar: /images/speakers/eileen-wagner.jpg
 speaker: true
 ---
-
-TBD 
