--- a/content/profiles/jan-lehnardt.mdx
+++ b/content/profiles/jan-lehnardt.mdx
@@ -1,8 +1,6 @@
 ---
 name: Jan Lehnardt
 role: Company
-avatar: /images/speakers/TBD.png
+avatar: /images/speakers/jan.jpg
 speaker: true
 ---
-
-TBD 
