--- a/content/profiles/johannes-schickling.mdx
+++ b/content/profiles/johannes-schickling.mdx
@@ -1,8 +1,6 @@
 ---
 name: Johannes Schickling
 role: Company
-avatar: /images/speakers/TBD.png
+avatar: /images/speakers/johannes.jpg
 speaker: true
 ---
-
-TBD
