--- a/content/profiles/joseph-gentle.mdx
+++ b/content/profiles/joseph-gentle.mdx
@@ -1,8 +1,6 @@
 ---
 name: Joseph Gentle
 role: Company
-avatar: /images/speakers/TBD.png
+avatar: /images/speakers/joseph.jpg
 speaker: true
 ---
-
-TBD 
