--- a/content/profiles/mauve-signweaver.mdx
+++ b/content/profiles/mauve-signweaver.mdx
@@ -1,8 +1,6 @@
 ---
 name: Mauve Signweaver
 role: Company
-avatar: /images/speakers/TBD.png
+avatar: /images/speakers/mauve.jpg
 speaker: true
 ---
-
-TBD 
