--- a/content/profiles/paul-butler.mdx
+++ b/content/profiles/paul-butler.mdx
@@ -1,7 +1,7 @@
 ---
 name: Paul Butler
 role: Jamsocket
-avatar: /images/speakers/TBD.png
+avatar: /images/speakers/paul.jpg
 speaker: true
 twitter: https://x.com/paulgb
 bluesky: https://bsky.app/profile/paulbutler.org
