--- a/content/profiles/pvh.mdx
+++ b/content/profiles/pvh.mdx
@@ -1,8 +1,6 @@
 ---
 name: Peter van Hardenberg
 role: Ink & Switch
-avatar: /images/speakers/TBD.png
+avatar: /images/speakers/pvh.jpg
 speaker: true
 ---
-
-Peter will share the latest about Patchwork, a new Ink & Switch research project. 
