--- a/content/profiles/rasmus-andersson.mdx
+++ b/content/profiles/rasmus-andersson.mdx
@@ -1,8 +1,6 @@
 ---
 name: Rasmus Andersson
 role: Playbit
-avatar: /images/speakers/TBD.png
+avatar: /images/speakers/rasmus.jpg
 speaker: true
 ---
-
-TBD
