--- a/content/profiles/timo-wilhelm.mdx
+++ b/content/profiles/timo-wilhelm.mdx
@@ -1,8 +1,6 @@
 ---
 name: Timo Wilhelm
 role: Company
-avatar: /images/speakers/TBD.png
+avatar: /images/speakers/timo.jpg
 speaker: true
 ---
-
-TBD 
