--- a/content/profiles/zhanna-sharipova.mdx
+++ b/content/profiles/zhanna-sharipova.mdx
@@ -1,8 +1,6 @@
 ---
 name: Zhanna Sharipova
 role: Company
-avatar: /images/speakers/TBD.png
+avatar: /images/speakers/zhanna.jpg
 speaker: true
 ---
-
-TBD 
