--- a/content/profiles/alexander-thiele.mdx
+++ b/content/profiles/alexander-thiele.mdx
@@ -1,7 +1,7 @@
 ---
 name: Alexander Thiele
 role: Company
-avatar: /images/speakers/TBD.png
+avatar: /images/speakers/alexander.jpg
 speaker: true
 ---
 
