--- a/content/profiles/anselm-eickhoff.mdx
+++ b/content/profiles/anselm-eickhoff.mdx
@@ -1,8 +1,6 @@
 ---
 name: Anselm Eickhoff
 role: Company
-avatar: /images/speakers/TBD.png
+avatar: /images/speakers/anselm.jpg
 speaker: true
 ---
-
-TBD
