--- a/content/profiles/nathan-wienert.mdx
+++ b/content/profiles/nathan-wienert.mdx
@@ -1,8 +1,6 @@
 ---
 name: Nathan Wienert
 role: Company
-avatar: /images/speakers/TBD.png
+avatar: /images/speakers/nathan.jpg
 speaker: true
 ---
-
-TBD 
