import some bios from last year

--- a/content/profiles/aaron-boodman.mdx
+++ b/content/profiles/aaron-boodman.mdx
@@ -4,4 +4,8 @@ role: Rocicorp
 avatar: /images/speakers/aaron-boodman.png
 speaker: true
 workshopHost: true
+twitter: https://x.com/aboodman
+website: https://replicache.dev/
 ---
+
+Founder at Rocicorp. Building Replicache and Reflect, raising two great kids, and trying to be a better person. Also found at http://aaronboodman.com.
