--- a/content/profiles/brooklyn-zelenka.mdx
+++ b/content/profiles/brooklyn-zelenka.mdx
@@ -1,6 +1,20 @@
 ---
 name: Brooklyn Zelenka
-role: Company
+role: UCAN
 avatar: /images/speakers/brooklyn.jpg
 speaker: true
+twitter: https://x.com/expede
+website: https://github.com/expede
 ---
+
+🦋 http://bsky.app/profile/expede.wtf
+
+🐘 http://octodon.social/@expede
+
+👩‍🔬 Indie developer & researcher
+
+🏳️‍🌈 Queer AF
+
+📚🤝 FOSS, standards, commons
+
+#BLM
