--- a/content/profiles/jess-martin.mdx
+++ b/content/profiles/jess-martin.mdx
@@ -1,6 +1,10 @@
 ---
 name: Jess Martin
-role: Company
+role: SocioTechnica
 avatar: /images/speakers/jess-martin.png
 speaker: true
----
+twitter: https://x.com/jessmartin
+
+🌻 Inventing tools for a better tomorrow
+
+📝🚵‍♂️⛷️🎸🎹🎾✝️
