--- a/content/profiles/johannes-schickling.mdx
+++ b/content/profiles/johannes-schickling.mdx
@@ -1,6 +1,11 @@
 ---
 name: Johannes Schickling
-role: Company
+role: Building Overtone & LiveStore
 avatar: /images/speakers/johannes.jpg
 speaker: true
+twitter: https://twitter.com/schickling
+linkedin: https://www.linkedin.com/in/schickling/
+website: https://schickling.dev
 ---
+
+Building a local-first music app @overtone*app. Sometimes over-engineering. 🎙️ @localfirstfm. DX @EffectTS*. Founded @prisma. he/him.
