--- a/content/profiles/anselm-eickhoff.mdx
+++ b/content/profiles/anselm-eickhoff.mdx
@@ -1,7 +1,11 @@
 ---
 name: Anselm Eickhoff
-role: Company
+role: Jazz
 avatar: /images/speakers/anselm.jpg
 speaker: true
 workshopHost: true
+twitter: https://x.com/anselm_io
+website: https://jazz.tools/
 ---
+
+Thinking about code & design. Building @jazz_tools / @gcmp_io. “Work sucks. Play works.”
