company should be filled in for everyone

--- a/content/profiles/brooklyn-zelenka.mdx
+++ b/content/profiles/brooklyn-zelenka.mdx
@@ -1,6 +1,6 @@
 ---
 name: Brooklyn Zelenka
-role: UCAN
+role: Ink & Switch
 avatar: /images/speakers/brooklyn.jpg
 speaker: true
 twitter: https://x.com/expede
