--- a/content/profiles/chad-fowler.mdx
+++ b/content/profiles/chad-fowler.mdx
@@ -1,6 +1,6 @@
 ---
 name: Chad Fowler
-role: Ex-Wunderlist & MC
+role: BlueYard
 avatar: /images/speakers/chad-fowler.png
 speaker: true
 twitter: https://x.com/chadfowler
