--- a/content/profiles/johannes-schickling.mdx
+++ b/content/profiles/johannes-schickling.mdx
@@ -1,6 +1,6 @@
 ---
 name: Johannes Schickling
-role: Building Overtone & LiveStore
+role: Overengineering Studio
 avatar: /images/speakers/johannes.jpg
 speaker: true
 twitter: https://twitter.com/schickling
