--- a/content/profiles/matthew-weidner.mdx
+++ b/content/profiles/matthew-weidner.mdx
@@ -1,6 +1,6 @@
 ---
 name: Matthew Weidner
-role: Company
+role: Carnegie Mellon University
 avatar: /images/speakers/matthew-weidner.jpg
 speaker: true
 bluesky: https://bsky.app/profile/mweidner.bsky.social
