--- a/content/profiles/nikita-prokopov.mdx
+++ b/content/profiles/nikita-prokopov.mdx
@@ -1,7 +1,7 @@
 ---
 name: Nikita Prokopov
 avatar: /images/speakers/nikita.jpg
-role: .
+role: Instant DB
 speaker: true
 mastodon: https://mastodon.online/@nikitonsky
 ---
