--- a/content/profiles/thomas-steiner.mdx
+++ b/content/profiles/thomas-steiner.mdx
@@ -1,6 +1,6 @@
 ---
 name: Thomas Steiner
-role: Google
+role: Google Chrome
 avatar: /images/speakers/thomas-steiner.jpg
 speaker: true
 bluesky: "@tomayac.com"
