--- a/content/profiles/james-arthur.mdx
+++ b/content/profiles/james-arthur.mdx
@@ -3,4 +3,7 @@ name: James Arthur
 role: Electric
 avatar: /images/speakers/james-arthur.png
 speaker: true
+website: https://electric-sql.com/
 ---
+
+Co-founder of Hazy and Opendesk. Founding Partner Post Urban Ventures. TED Prize, $1M Microsoft Prize.
