more talk descriptions and bios

--- a/content/profiles/alex-good.mdx
+++ b/content/profiles/alex-good.mdx
@@ -5,3 +5,5 @@ avatar: /images/speakers/alex-good.png
 speaker: true
 website: https://automerge.org/
 ---
+
+Alex Good works at Ink & Switch maintaining the Automerge local first sync engine.
