--- a/content/profiles/johannes-schickling.mdx
+++ b/content/profiles/johannes-schickling.mdx
@@ -8,4 +8,4 @@ linkedin: https://www.linkedin.com/in/schickling/
 website: https://schickling.dev
 ---
 
-Building a local-first music app @overtone*app. Sometimes over-engineering. 🎙️ @localfirstfm. DX @EffectTS*. Founded @prisma. he/him.
+Johannes Schickling is the founder of Overengineering Studio where he is working on Overtone (a local-first music app) and LiveStore (a local-first data layer). He previous founded Prisma and hosts the localfirst.fm podcast.
