--- a/content/profiles/timo-wilhelm.mdx
+++ b/content/profiles/timo-wilhelm.mdx
@@ -4,3 +4,5 @@ role: Cloudflare
 avatar: /images/speakers/timo.jpg
 speaker: true
 ---
+
+Timo Wilhelm is a Senior Solutions Engineer at Cloudflare, specializing in developer platforms and serverless application development. With over six years at Microsoft building Azure cloud and AI solutions, Timo is passionate about designing scalable software systems, and now helps build the future of internet applications on Cloudflare Workers.
