martin filename typo

--- a/content/profiles/martin-kleppmann.mdx
+++ b/content/profiles/martin-kleppmann.mdx
@@ -1,7 +1,7 @@
 ---
 name: Martin Kleppmann
 role: University of Cambridge, Ink & Switch
-avatar: /images/speakers/martin-kleppmann.png
+avatar: /images/speakers/martin-kleppmann.jpg
 speaker: true
 twitter: https://twitter.com/martinkl
 website: https://martin.kleppmann.com/
