--- a/content/profiles/alex-good.mdx
+++ b/content/profiles/alex-good.mdx
@@ -3,7 +3,7 @@ name: Alex Good
 role: Ink & Switch
 avatar: /images/speakers/alex-good.png
 speaker: true
-website: https://automerge.org/
+website: https://patternist.xyz/
 ---
 
 Alex Good works at Ink & Switch maintaining the Automerge local first sync engine.
