profile and talk update

--- a/content/profiles/joseph-gentle.mdx
+++ b/content/profiles/joseph-gentle.mdx
@@ -1,6 +1,10 @@
 ---
-name: Joseph Gentle
+name: Seph Gentle
 role: " "
-avatar: /images/speakers/joseph.jpg
+avatar: /images/speakers/seph.jpg
 speaker: true
+bluesky: seph.bsky.social
+website: https://josephg.com/
 ---
+
+Seph Gentle has been programming since he was a kid. Programming feels magical when you're young, and he wants to reclaim that feeling. Seph worked Google Wave. When Wave got shut down, he made ShareJS (the first opensource JS library for operational transformation). Then ShareDB. The last few years he's been pushing the bar on CRDT performance with Diamond Types and Eg-walker: a novel CRDT-like algorithm for collaborative text editing. Seph is also an improviser and apprentice clown.
