--- a/content/profiles/brooklyn-zelenka.mdx
+++ b/content/profiles/brooklyn-zelenka.mdx
@@ -3,18 +3,8 @@ name: Brooklyn Zelenka
 role: Ink & Switch
 avatar: /images/speakers/brooklyn.jpg
 speaker: true
-twitter: https://x.com/expede
-website: https://github.com/expede
+bluesky: https://bsky.app/profile/expede.wtf
+mastodon: https://types.pl/@expede
 ---
 
-🦋 http://bsky.app/profile/expede.wtf
-
-🐘 http://octodon.social/@expede
-
-👩‍🔬 Indie developer & researcher
-
-🏳️‍🌈 Queer AF
-
-📚🤝 FOSS, standards, commons
-
-#BLM
+Brooklyn is a developer and researcher. She has interests in distributed access control, local-first, E2EE, standards, and open source. She lead the Keyhive team at Ink & Switch, is the spec editor for the UCAN distributed RPC and auth system, and has worked on CRDTs, distributed file systems, databases, and programming languages. Brooklyn is based in beautiful, rainy Vancouver.
