--- a/content/profiles/eileen-wagner.mdx
+++ b/content/profiles/eileen-wagner.mdx
@@ -4,3 +4,5 @@ role: Ink & Switch
 avatar: /images/speakers/eileen-wagner.jpg
 speaker: true
 ---
+
+Eileen is a Berlin-based UX designer working on usability of emerging technologies. She partners with technology teams to design and test new products. She maintains an open UX library, Decent Patterns, and is on the board of Open Source Design. 
