speaker photos with 2025 branding

--- a/content/profiles/adam-fish.mdx
+++ b/content/profiles/adam-fish.mdx
@@ -1,7 +1,7 @@
 ---
 name: Adam Fish
 role: Ditto
-avatar: /images/speakers/adam-fish.jpg
+avatar: /images/speakers/adam-fish.png
 speaker: true
 ---
 
