--- a/content/profiles/alexander-thiele.mdx
+++ b/content/profiles/alexander-thiele.mdx
@@ -1,6 +1,6 @@
 ---
 name: Alexander Thiele
 role: "Ocell, Flutter"
-avatar: /images/speakers/alexander.jpg
+avatar: /images/speakers/alexander-thiele.png
 speaker: true
 ---
