--- a/content/profiles/anselm-eickhoff.mdx
+++ b/content/profiles/anselm-eickhoff.mdx
@@ -1,11 +1,11 @@
 ---
 name: Anselm Eickhoff
 role: Jazz
-avatar: /images/speakers/anselm.jpg
+avatar: /images/speakers/anselm-eickhoff.png
 speaker: true
 workshopHost: true
 twitter: https://x.com/anselm_io
 website: https://jazz.tools/
 ---
 
-Thinking about code & design. Building @jazz_tools / @gcmp_io. “Work sucks. Play works.”
+Thinking about code & design. Building @jazz_tools / @gcmp_io. "Work sucks. Play works."
