--- a/content/profiles/dev-agrawal.mdx
+++ b/content/profiles/dev-agrawal.mdx
@@ -1,7 +1,7 @@
 ---
 name: Dev Agrawal
 role: SolidJS
-avatar: /images/speakers/dev.jpg
+avatar: /images/speakers/dev-agrawal.png
 speaker: true
 ---
 
