--- a/content/profiles/eileen-wagner.mdx
+++ b/content/profiles/eileen-wagner.mdx
@@ -1,7 +1,7 @@
 ---
 name: Eileen Wagner
 role: Ink & Switch
-avatar: /images/speakers/eileen-wagner.jpg
+avatar: /images/speakers/eileen-wagner.png
 speaker: true
 ---
 
