--- a/content/profiles/jan-lehnardt.mdx
+++ b/content/profiles/jan-lehnardt.mdx
@@ -1,6 +1,6 @@
 ---
 name: Jan Lehnardt
 role: Neighbourhoodie, CouchDB
-avatar: /images/speakers/jan.jpg
+avatar: /images/speakers/jan-lehnardt.png
 speaker: true
 ---
