--- a/content/profiles/johannes-schickling.mdx
+++ b/content/profiles/johannes-schickling.mdx
@@ -1,7 +1,7 @@
 ---
 name: Johannes Schickling
 role: Overengineering Studio
-avatar: /images/speakers/johannes.jpg
+avatar: /images/speakers/johannes-schickling.png
 speaker: true
 twitter: https://twitter.com/schickling
 linkedin: https://www.linkedin.com/in/schickling/
