--- a/content/profiles/joseph-gentle.mdx
+++ b/content/profiles/joseph-gentle.mdx
@@ -1,7 +1,7 @@
 ---
 name: Seph Gentle
 role: " "
-avatar: /images/speakers/seph.jpg
+avatar: /images/speakers/seph-gentle.png
 speaker: true
 bluesky: seph.bsky.social
 website: https://josephg.com/
