--- a/content/profiles/matthew-weidner.mdx
+++ b/content/profiles/matthew-weidner.mdx
@@ -1,7 +1,7 @@
 ---
 name: Matthew Weidner
 role: Common Curriculum, Carnegie Mellon University
-avatar: /images/speakers/matthew-weidner.jpg
+avatar: /images/speakers/matthew-weidner.png
 speaker: true
 bluesky: https://bsky.app/profile/mweidner.bsky.social
 website: https://mattweidner.com/
