--- a/content/profiles/mauve-signweaver.mdx
+++ b/content/profiles/mauve-signweaver.mdx
@@ -1,6 +1,6 @@
 ---
 name: Mauve Signweaver
 role: Hypha Worker Coop
-avatar: /images/speakers/mauve.jpg
+avatar: /images/speakers/mauve-signweaver.png
 speaker: true
 ---
