--- a/content/profiles/nathan-wienert.mdx
+++ b/content/profiles/nathan-wienert.mdx
@@ -1,6 +1,6 @@
 ---
 name: Nathan Wienert
 role: Tamagui / One
-avatar: /images/speakers/nathan.jpg
+avatar: /images/speakers/nathan-wienert.png
 speaker: true
 ---
