--- a/content/profiles/nikita-prokopov.mdx
+++ b/content/profiles/nikita-prokopov.mdx
@@ -1,6 +1,6 @@
 ---
 name: Nikita Prokopov
-avatar: /images/speakers/nikita.jpg
+avatar: /images/speakers/nikita.png
 role: Instant DB
 speaker: true
 mastodon: https://mastodon.online/@nikitonsky
