--- a/content/profiles/pvh.mdx
+++ b/content/profiles/pvh.mdx
@@ -1,6 +1,6 @@
 ---
 name: Peter van Hardenberg
 role: Ink & Switch
-avatar: /images/speakers/pvh.jpg
+avatar: /images/speakers/pvh.png
 speaker: true
 ---
