--- a/content/profiles/rasmus-andersson.mdx
+++ b/content/profiles/rasmus-andersson.mdx
@@ -1,6 +1,6 @@
 ---
 name: Rasmus Andersson
 role: Playbit
-avatar: /images/speakers/rasmus.jpg
+avatar: /images/speakers/rasmus-andersson.png
 speaker: true
 ---
