--- a/content/profiles/thomas-steiner.mdx
+++ b/content/profiles/thomas-steiner.mdx
@@ -1,7 +1,7 @@
 ---
 name: Thomas Steiner
 role: Google Chrome
-avatar: /images/speakers/thomas-steiner.jpg
+avatar: /images/speakers/thomas-steiner.png
 speaker: true
 bluesky: "@tomayac.com"
 mastodon: "@tomayac@toot.cafe"
