--- a/content/profiles/timo-wilhelm.mdx
+++ b/content/profiles/timo-wilhelm.mdx
@@ -1,7 +1,7 @@
 ---
 name: Timo Wilhelm
 role: Cloudflare
-avatar: /images/speakers/timo.jpg
+avatar: /images/speakers/timo-wilhelm.png
 speaker: true
 ---
 
