--- a/content/profiles/zhanna-sharipova.mdx
+++ b/content/profiles/zhanna-sharipova.mdx
@@ -1,6 +1,6 @@
 ---
 name: Zhanna Sharipova
 role: Anytype
-avatar: /images/speakers/zhanna.jpg
+avatar: /images/speakers/zhanna-sharipova.png
 speaker: true
 ---
