--- a/content/profiles/brooklyn-zelenka.mdx
+++ b/content/profiles/brooklyn-zelenka.mdx
@@ -1,7 +1,7 @@
 ---
 name: Brooklyn Zelenka
 role: Ink & Switch
-avatar: /images/speakers/brooklyn.jpg
+avatar: /images/speakers/brooklyn-zelenka.png
 speaker: true
 bluesky: https://bsky.app/profile/expede.wtf
 mastodon: https://types.pl/@expede
