--- a/content/profiles/jess-martin.mdx
+++ b/content/profiles/jess-martin.mdx
@@ -1,9 +1,10 @@
 ---
 name: Jess Martin
-role: Next LX
+role: SocioTechnica
 avatar: /images/speakers/jess-martin.png
 speaker: true
-twitter: https://x.com/jessmartin
+bluesky: https://bsky.app/profile/jessmart.in
+website: https://jessmart.in/
 ---
 
 🌻 Inventing tools for a better tomorrow
