add bluesky links

--- a/content/profiles/adam-wiggins.mdx
+++ b/content/profiles/adam-wiggins.mdx
@@ -4,4 +4,9 @@ role: Local First Conf
 avatar: /images/speakers/adam-wiggins.png
 speaker: true
 website: https://adamwiggins.com/
+bluesky: https://bsky.app/profile/adamwiggins.bsky.social
 ---
+
+My mission is to improve computers in service of human creativity and prosperity.
+
+You might know me as cofounder of Ink & Switch (industrial research), Heroku (web app deployment), and Muse (canvas for thinking). I also hosted the podcast Metamuse.
