--- a/content/profiles/martin-kleppmann.mdx
+++ b/content/profiles/martin-kleppmann.mdx
@@ -3,8 +3,9 @@ name: Martin Kleppmann
 role: University of Cambridge, Ink & Switch
 avatar: /images/speakers/martin-kleppmann.png
 speaker: true
-twitter: https://twitter.com/martinkl
 website: https://martin.kleppmann.com/
+bluesky: https://bsky.app/profile/martin.kleppmann.com
+mastodon: https://nondeterministic.computer/@martin
 ---
 
-Find me at @martin.kleppmann.com on Bluesky, @martin@nondeterministic.computer on Mastodon. Author of @intensivedata, Associate Professor @Cambridge_CL. he/him
+Author of Designing Data-Intensive Applications, Associate Professor at Cambridge Computer Science. he/him
